FEAT: findScheduleByName 정렬기능 추가